@@ -1,51 +1,58 @@
-/*
- * Created on Mar 24, 2005
- */
+/********************************************************************************
+ * CruiseControl, a Continuous Integration Toolkit
+ * Copyright (c) 2001, ThoughtWorks, Inc.
+ * 651 W Washington Ave. Suite 600
+ * Chicago, IL 60661 USA
+ * All rights reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ *
+ *     + Redistributions of source code must retain the above copyright
+ *       notice, this list of conditions and the following disclaimer.
+ *
+ *     + Redistributions in binary form must reproduce the above
+ *       copyright notice, this list of conditions and the following
+ *       disclaimer in the documentation and/or other materials provided
+ *       with the distribution.
+ *
+ *     + Neither the name of ThoughtWorks, Inc., CruiseControl, nor the
+ *       names of its contributors may be used to endorse or promote
+ *       products derived from this software without specific prior
+ *       written permission.
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+ * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+ * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
+ * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE REGENTS OR
+ * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
+ * EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+ * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+ * PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+ * LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+ * NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+ * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ ********************************************************************************/
 package net.sourceforge.cruisecontrol.publishers;
-
-import java.util.ArrayList;
-import java.util.Iterator;
-import java.util.List;
 
 import org.jdom.Element;
 
-import net.sourceforge.cruisecontrol.CruiseControlException;
-import net.sourceforge.cruisecontrol.Publisher;
 import net.sourceforge.cruisecontrol.util.XMLLogHelper;
 
 /**
- * @author Jeffrey Fredrick
+ * Executes any nested publishers if and only if the build was successful
  */
-public class OnSuccessPublisher implements Publisher {
-    private List publishers = new ArrayList();
+public class OnSuccessPublisher extends ConditionalPublisher {
 
     /* (non-Javadoc)
-     * @see net.sourceforge.cruisecontrol.Publisher#publish(org.jdom.Element)
+     * @see net.sourceforge.cruisecontrol.Publisher.ConditionalPublisher#shouldPublish(Element)
      */
-    public void publish(Element log) throws CruiseControlException {
+    public boolean shouldPublish(Element log) {
         XMLLogHelper helper = new XMLLogHelper(log);
         if (helper.isBuildSuccessful()) {
-            Iterator iterator = publishers.iterator();
-            while (iterator.hasNext()) {
-                Publisher publisher = (Publisher) iterator.next();
-                publisher.publish(log);
-            }            
+            return true;
         }
+        return false;
     }
-
-    /* (non-Javadoc)
-     * @see net.sourceforge.cruisecontrol.Publisher#validate()
-     */
-    public void validate() throws CruiseControlException {
-        Iterator iterator = publishers.iterator();
-        while (iterator.hasNext()) {
-            Publisher publisher = (Publisher) iterator.next();
-            publisher.validate();
-        }
-    }
-
-    public void add(Publisher publisher) {
-        publishers.add(publisher);
-    }
-
 }
